model Appointment {
    id             String            @id @default(uuid())
    patientId      String
    patient        Patient           @relation(fields: [patientId], references: [id])
    doctorId       String
    doctor         Doctor            @relation(fields: [doctorId], references: [id])
    scheduleId     String
    schedule       Schedule          @relation(fields: [scheduleId], references: [id])
    videoCallingId String
    status         AppointmentStatus @default(SCHEDULED)
    paymentStatus  PaymentStatus     @default(UNPAID)
    createAt       DateTime          @default(now())
    updateAt       DateTime          @updatedAt
    payment        Payment?
    prescription   Prescription?
    review         Review?

    @@map("appointments")
}

model Payment {
    id                 String        @id @default(uuid())
    appointmentId      String        @unique
    appointment        Appointment   @relation(fields: [appointmentId], references: [id])
    amount             Float
    transactionId      String        @unique
    status             PaymentStatus @default(UNPAID)
    paymentGatewayData Json?
    createAt           DateTime      @default(now())
    updateAt           DateTime      @updatedAt

    @@map("payments")
}

model Prescription {
    id            String      @id @default(uuid())
    appointmentId String      @unique
    appointment   Appointment @relation(fields: [appointmentId], references: [id])
    doctorId      String
    doctor        Doctor      @relation(fields: [doctorId], references: [id])
    patientId     String
    patient       Patient     @relation(fields: [patientId], references: [id])
    instructions  String
    followUpDate  DateTime?
    createAt      DateTime    @default(now())
    updateAt      DateTime    @updatedAt

    @@map("prescriptions")
}

model Review {
    id            String      @id @default(uuid())
    appointmentId String      @unique
    appointment   Appointment @relation(fields: [appointmentId], references: [id])
    doctorId      String
    doctor        Doctor      @relation(fields: [doctorId], references: [id])
    patientId     String
    patient       Patient     @relation(fields: [patientId], references: [id])
    rating        Float         @default(5)
    comment       String?
    createAt      DateTime    @default(now())
    updateAt      DateTime    @updatedAt

    @@map("reviews")
}