model Schedule {
    id            String   @id @default(uuid())
    startDateTime DateTime
    endDateTime   DateTime
    createdAt     DateTime @default(now())
    updatedAt     DateTime @updatedAt

    doctorSchedules DoctorSchedule[]
    appointments    Appointment[]

    @@map("schedules")
}

model DoctorSchedule {
    doctorId   String
    scheduleId String
    isBooked   Boolean  @default(false)
    createdAt  DateTime @default(now())
    updatedAt  DateTime @updatedAt

    doctor   Doctor   @relation(fields: [doctorId], references: [id])
    schedule Schedule @relation(fields: [scheduleId], references: [id])

    @@id([doctorId, scheduleId])
    @@map("doctor_schedules")
}
