model User {
  id                String     @id @default(uuid())
  email             String     @unique
  password          String
  role              UserRole   @default(PATIENT)
  status            UserStatus @default(ACTIVE)
  needPasswordReset Boolean    @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  admin   Admin?
  doctor  Doctor?
  patient Patient?

  @@map("users")
}

model Admin {
  id            String  @id @default(uuid())
  name          String
  email         String  @unique
  profilePhoto  String?
  contactNumber String?
  isDeleted     Boolean @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user User @relation(fields: [email], references: [email])

  @@map("admins")
}

model Doctor {
  id                  String  @id @default(uuid())
  name                String
  email               String  @unique
  profilePhoto        String
  contactNumber       String
  address             String
  registrationNumber  String
  experience          Int
  gender              Gender
  appointmentFee      Int
  qualification       String
  currentWorkingPlace String
  designation         String
  averageRating       Float    @default(0.0)
  isDeleted           Boolean @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user User @relation(fields: [email], references: [email])
  doctorSchedules DoctorSchedule[]
  doctorSpecialties DoctorSpecialties[]
  appointments Appointment[]
  prescriptions Prescription[]
  reviews Review[]
  
  @@map("doctors")
}

model Patient {
  id            String  @id @default(uuid())
  name          String
  email         String  @unique
  profilePhoto  String?
  contactNumber String?
  address       String?
  isDeleted     Boolean @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user User @relation(fields: [email], references: [email])
  appointments Appointment[]
  prescriptions Prescription[]
  reviews Review[]

  @@map("patients")
}