Table User {
    id uuid [pk, default: `uuid__generate_v4()`]
    email VARCHAR(255) [unique]
    password VARCHAR(255)
    role VARCHAR(50) [note: "role IN ('admin', 'patient', 'doctor')"]
    status VARCHAR(50) [note: "status IN ('active', 'inactive')"]


    created_at TIMESTAMP [default: `now()`]
    updated_at TIMESTAMP [default: `now()`]
}

Table Patient {
    id uuid [pk, default: `uuid__generate_v4()`]
    email VARCHAR(255) [unique]
    user_id uuid [ref: - User.id]
    name VARCHAR(255)
    profilePhoto VARCHAR(255)
    contactNumber VARCHAR(20)
    address VARCHAR(255)
    isDeleted BOOLEAN [default: false]

    created_at TIMESTAMP [default: `now()`]
    updated_at TIMESTAMP [default: `now()`]
}

Table Doctor {
    id uuid [pk, default: `uuid__generate_v4()`]
    email VARCHAR(255) [unique]
    user_id uuid [ref: - User.id]
    name VARCHAR(255)
    profilePhoto VARCHAR(255)
    contactNumber VARCHAR(20)
    address VARCHAR(255)
    experience INT
    gender VARCHAR(20) [note: "gender IN ('male', 'female')"]
    qualification VARCHAR(255)
    currentWorkplace VARCHAR(255)
    designation VARCHAR(255)
    isDeleted BOOLEAN [default: false]
    averageRating DECIMAL(3, 2) [default: 0.00]

    created_at TIMESTAMP [default: `now()`]
    updated_at TIMESTAMP [default: `now()`]
}

Table Admin {
    id uuid [pk, default: `uuid__generate_v4()`]
    user_id uuid [ref: - User.id]
    name VARCHAR(255)
    profilePhoto VARCHAR(255)
    contactNumber VARCHAR(20)
    isDeleted BOOLEAN [default: false]

    created_at TIMESTAMP [default: `now()`]
    updated_at TIMESTAMP [default: `now()`]
}

Table Schedule {
    id uuid [pk, default: `uuid__generate_v4()`]
    startTime TIME
    endTime TIME

    created_at TIMESTAMP [default: `now()`]
    updated_at TIMESTAMP [default: `now()`]
}

Table DoctorSchedule {
    doctor_id uuid
    schedule_id uuid
    isBooked BOOLEAN [default: false]

    id uuid [pk, default: `composite key(doctor_id, schedule_id)`]

    created_at TIMESTAMP [default: `now()`]
    updated_at TIMESTAMP [default: `now()`]
}

Table Specicalities {
    id uuid [pk, default: `uuid__generate_v4()`]
    title VARCHAR(255) [unique]
    icon string

    created_at TIMESTAMP [default: `now()`]
    updated_at TIMESTAMP [default: `now()`]
}

Table  DoctorSpecialities {
    doctor_id uuid [ref: > Doctor.id]
    speciality_id uuid [ref: > Specicalities.id]

    created_at TIMESTAMP [default: `now()`]
    updated_at TIMESTAMP [default: `now()`]
}

Table Appointment {
    id uuid [pk, default: `uuid__generate_v4()`]
    patient_id uuid [ref: - Patient.id]
    doctor_id uuid [ref: - Doctor.id]
    schedule_id uuid [ref: - DoctorSchedule.schedule_id]
    appointmentDate DATE
    status VARCHAR(50) [note: "status IN ('scheduled', 'completed', 'cancelled')"]

    created_at TIMESTAMP [default: `now()`]
    updated_at TIMESTAMP [default: `now()`]
}

Table Prescription {
    id uuid [pk, default: `uuid__generate_v4()`]
    appointment_id uuid [ref: - Appointment.id]
    doctor_id uuid [ref: - Doctor.id]
    patient_id uuid [ref: - Patient.id]
    instructions TEXT
    followUpDate DATE

    created_at TIMESTAMP [default: `now()`]
    updated_at TIMESTAMP [default: `now()`]
}

Table Payment {
    id uuid [pk, default: `uuid__generate_v4()`]
    appointment_id uuid [ref: - Appointment.id]
    amount DECIMAL(10, 2)
    transactionId VARCHAR(100) [unique]
    paymentGatewayData JSONB
    status VARCHAR(50) [note: "status IN ('pending', 'completed', 'failed')"]

    created_at TIMESTAMP [default: `now()`]
    updated_at TIMESTAMP [default: `now()`]
}

Table Review {
    id uuid [pk, default: `uuid__generate_v4()`]
    appointment_id uuid [ref: - Appointment.id]
    doctor_id uuid [ref: - Doctor.id]
    patient_id uuid [ref: - Patient.id]
    rating INT [note: "rating IN (1, 2, 3, 4, 5)"]
    comment TEXT

    created_at TIMESTAMP [default: `now()`]
    updated_at TIMESTAMP [default: `now()`]
}

Table PatientHealthData {
    id uuid [pk, default: `uuid__generate_v4()`]
    patient_id uuid [ref: - Patient.id]
    dateOfBirth DATE
    height DECIMAL(5, 2)  // in cm
    weight DECIMAL(5, 2)  // in kg
    bloodGroup VARCHAR(3) [note: "bloodType IN ('A+', 'A-', 'B+', 'B-', 'AB+', 'AB-', 'O+', 'O-')"]
    hasAllergies BOOLEAN
    hasDiabetes BOOLEAN
    smokingStatus VARCHAR(20) [note: "smokingStatus IN ('never', 'former', 'current')"]
    dietaryPreferences TEXT
    mentalHealthHistory TEXT
    pregnancyStatus VARCHAR(20) [note: "pregnancyStatus IN ('not pregnant', 'pregnant', 'postpartum')"]
    immunizationStatus TEXT
    hasPastSurgeries BOOLEAN
    recentAnxiety TEXT
    recentDepression TEXT
    maritalStatus VARCHAR(20) [note: "maritalStatus IN ('single', 'married', 'divorced', 'widowed')"]

    created_at TIMESTAMP [default: `now()`]
    updated_at TIMESTAMP [default: `now()`]
}

Table MedicalReport {
    id int [pk, increment]
    patient_id uuid [ref: - Patient.id]
    reportName VARCHAR(255)
    reportLink VARCHAR(255)

    created_at TIMESTAMP [default: `now()`]
    updated_at TIMESTAMP [default: `now()`]
}